ensure that filters are visible to deselect if in use
git-svn-id: svn+ssh://rubyforge.org/var/svn/myexperiment/branches/discovery@2473 4f7b4649-9ca9-420a-81b3-55a188e4d46f

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2125,6 +2125,10 @@ table.quick_add td.submit {
   float: right;
 }
 
+.pivot .crumbs {
+  margin-top: 0.5em;
+}
+
 .pivot .filter-in-use {
   background: #e0e0e0;
   border: 1px solid #d0d0d0;
